# critirag

./: .env.example  .gitattributes  CONTRIBUTING.md  Dockerfile.backend  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.interface-design/: system.md
docs/docs/core-components/: knowledge-browse.mdx
frontend/app/: layout.tsx
frontend/app/api/[...path]/: route.ts
frontend/app/api/mutations/: useOnboardingMutation.ts  useUpdateSettingsMutation.ts
frontend/app/api/queries/: useGetModelsQuery.ts  useGetSettingsQuery.ts
frontend/app/auth/callback/: page.tsx
frontend/app/knowledge/: page.tsx
frontend/app/login/: page.tsx
frontend/app/onboarding/_components/: google-onboarding.tsx  onboarding-card.tsx  onboarding-content.tsx
frontend/app/onboarding/_hooks/: useUpdateSettings.ts
frontend/app/settings/: page.tsx
frontend/app/unauthorized/: page.tsx
frontend/components/: docling-health-banner.tsx  header.tsx  layout-wrapper.tsx  provider-health-banner.tsx
frontend/components/icons/: google-logo.tsx  openrag-logo.tsx
frontend/lib/: constants.ts
frontend/tests/core/: onboarding.spec.ts
sdks/mcp/: pyproject.toml
sdks/python/: pyproject.toml
sdks/typescript/: package.json
src/: dependencies.py  main.py
src/api/: models.py  provider_validation.py  settings.py
src/config/: config_manager.py  model_constants.py  settings.py
src/services/: models_service.py
src/utils/: embeddings.py  langflow_headers.py
(+5 files in other folders)
